GEOMESA-69 Support Accumulo 1.4.x
Branch from master building against accumulo 1.4.x.
Also modified the artifact ids to include an acc1.4
tag to clearly identify them.